testdata/baselines/reference/submodule/compiler/tsxDeepAttributeAssignabilityError.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file1.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
my-component.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== my-component.tsx (1 errors) ====
    import * as React from 'react'
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface MyProps {
        x: string;
        y: MyInnerProps;
    }
    
    interface MyInnerProps {
        value: string;
    }
    
    export function MyComponent(_props: MyProps) {
        return <span>my component</span>;
    }
    
==== file1.tsx (1 errors) ====
    import * as React from 'react'
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    import { MyComponent } from './my-component'
    
    export const result = <MyComponent x="yes" y={{
        value: 42
    }} />;
    